feat: доработка слайдеров

--- a/src/index.html
+++ b/src/index.html
@@ -964,111 +964,146 @@
           </div>
           <!-- /.section__header -->
 
-          <div class="swiper swiper--overflow slider-useful">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
+          <div class="slider">
 
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">26.09.21</time>
-                      <span class="useful__views">
-                        1200
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
+            <div class="swiper swiper--shadow slider-useful">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="useful__card">
+                    <div class="useful__picture">
+                      <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
                     </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
-                  </div>
-                  <!-- /.useful__wrapper -->
-                </div>
-                <!-- /.useful__card -->
-              </div>
-              <!-- /.swiper-slide -->
+                    <!-- /.useful__picture -->
 
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
-
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">26.09.21</time>
-                      <span class="useful__views">
-                        1200
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
+                    <div class="useful__wrapper">
+                      <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                      <div class="useful__info">
+                        <time class="useful__date">26.09.21</time>
+                        <span class="useful__views">
+                          1200
+                          <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                        </span>
+                      </div>
+                      <!-- /.useful__info -->
+                      <button class="useful__button button button-primary">Подробнее</button>
                     </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
+                    <!-- /.useful__wrapper -->
                   </div>
-                  <!-- /.useful__wrapper -->
+                  <!-- /.useful__card -->
                 </div>
-                <!-- /.useful__card -->
-              </div>
-              <!-- /.swiper-slide -->
+                <!-- /.swiper-slide -->
 
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
-
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">26.09.21</time>
-                      <span class="useful__views">
-                        1200
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
+                <div class="swiper-slide">
+                  <div class="useful__card">
+                    <div class="useful__picture">
+                      <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
                     </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
-                  </div>
-                  <!-- /.useful__wrapper -->
-                </div>
-                <!-- /.useful__card -->
-              </div>
-              <!-- /.swiper-slide -->
+                    <!-- /.useful__picture -->
 
-              <div class="swiper-slide">
-                <div class="useful__card">
-                  <div class="useful__picture">
-                    <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
-                  </div>
-                  <!-- /.useful__picture -->
-
-                  <div class="useful__wrapper">
-                    <h3 class="useful__title">Как установить изделие</h3>
-                    <div class="useful__info">
-                      <time class="useful__date">27.09.21</time>
-                      <span class="useful__views">
-                        340
-                        <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
-                      </span>
+                    <div class="useful__wrapper">
+                      <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                      <div class="useful__info">
+                        <time class="useful__date">26.09.21</time>
+                        <span class="useful__views">
+                          1200
+                          <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                        </span>
+                      </div>
+                      <!-- /.useful__info -->
+                      <button class="useful__button button button-primary">Подробнее</button>
                     </div>
-                    <!-- /.useful__info -->
-                    <button class="useful__button button button-primary">Подробнее</button>
+                    <!-- /.useful__wrapper -->
                   </div>
-                  <!-- /.useful__wrapper -->
+                  <!-- /.useful__card -->
                 </div>
-                <!-- /.useful__card -->
+                <!-- /.swiper-slide -->
+
+                <div class="swiper-slide">
+                  <div class="useful__card">
+                    <div class="useful__picture">
+                      <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                    </div>
+                    <!-- /.useful__picture -->
+
+                    <div class="useful__wrapper">
+                      <h3 class="useful__title">Как установить изделие м ак установить изделие ак установить изделие</h3>
+                      <div class="useful__info">
+                        <time class="useful__date">26.09.21</time>
+                        <span class="useful__views">
+                          1200
+                          <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                        </span>
+                      </div>
+                      <!-- /.useful__info -->
+                      <button class="useful__button button button-primary">Подробнее</button>
+                    </div>
+                    <!-- /.useful__wrapper -->
+                  </div>
+                  <!-- /.useful__card -->
+                </div>
+                <!-- /.swiper-slide -->
+
+                <div class="swiper-slide">
+                  <div class="useful__card">
+                    <div class="useful__picture">
+                      <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                    </div>
+                    <!-- /.useful__picture -->
+
+                    <div class="useful__wrapper">
+                      <h3 class="useful__title">Как установить изделие</h3>
+                      <div class="useful__info">
+                        <time class="useful__date">27.09.21</time>
+                        <span class="useful__views">
+                          340
+                          <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                        </span>
+                      </div>
+                      <!-- /.useful__info -->
+                      <button class="useful__button button button-primary">Подробнее</button>
+                    </div>
+                    <!-- /.useful__wrapper -->
+                  </div>
+                  <!-- /.useful__card -->
+                </div>
+                <!-- /.swiper-slide -->
+
+                <div class="swiper-slide">
+                  <div class="useful__card">
+                    <div class="useful__picture">
+                      <img class="image image--cover" src="img/page/main/useful/1.jpg" alt="">
+                    </div>
+                    <!-- /.useful__picture -->
+
+                    <div class="useful__wrapper">
+                      <h3 class="useful__title">Как установить изделие</h3>
+                      <div class="useful__info">
+                        <time class="useful__date">27.09.21</time>
+                        <span class="useful__views">
+                          340
+                          <img class="ms-2" src="img/icons/misc/eye.svg" alt="">
+                        </span>
+                      </div>
+                      <!-- /.useful__info -->
+                      <button class="useful__button button button-primary">Подробнее</button>
+                    </div>
+                    <!-- /.useful__wrapper -->
+                  </div>
+                  <!-- /.useful__card -->
+                </div>
+                <!-- /.swiper-slide -->
               </div>
-              <!-- /.swiper-slide -->
+              <!-- /.swiper-wrapper -->
             </div>
-            <!-- /.swiper-wrapper -->
+            <!-- /.swiper swiper--overflow slider-useful -->
+
+            <div class="swiper__control">
+              <div class="swiper-button-prev slider-useful__prev"></div>
+              <div class="swiper-button-next slider-useful__next"></div>
+            </div>
+            <!-- /.swiper__control -->
           </div>
-          <!-- /.swiper swiper--overflow slider-useful -->
+          <!-- /.slider -->
         </div>
         <!-- /.callback -->
       </div>
@@ -1093,83 +1128,92 @@
 
           <p class="section__description">За 10 лет работы, мы успели собрать множество положительных отзывов о своей работе. Большинство клиентов остается довольными и рекомендуют наши услуги и изделия своим знакомым и друзьям. Мы дорожим хорошей репутацией и доверием к нашей деятельности.</p>
 
-          <div class="swiper slider-feedback swiper--shadow">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="feedback__card">
-                  <div class="feedback__picture">
-                    <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
-                  </div>
-                  <!-- /.feedback__picture -->
-
-                  <div class="feedback__wrapper">
-                    <p class="feedback__text">
-                      Благодарю Вас за установку сеточки на балконе! Душа моя спокойна по поводу моего котика, надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
-                    </p>
-
-                    <div class="feedback__footer">
-                      <span class="feedback__name">Александр А.</span>
-                      <time class="feedback__date">21.08.21</time>
+          <div class="slider">
+            <div class="swiper slider-feedback swiper--shadow">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="feedback__card">
+                    <div class="feedback__picture">
+                      <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
                     </div>
-                    <!-- /.feedback__footer -->
-                  </div>
-                  <!-- /.feedback__wrapper -->
-                </div>
-                <!-- /.feedback__card -->
-              </div>
-              <!-- /.swiper-slide -->
+                    <!-- /.feedback__picture -->
 
-              <div class="swiper-slide">
-                <div class="feedback__card">
-                  <div class="feedback__picture">
-                    <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
-                  </div>
-                  <!-- /.feedback__picture -->
+                    <div class="feedback__wrapper">
+                      <p class="feedback__text">
+                        Благодарю Вас за установку сеточки на балконе! Душа моя спокойна по поводу моего котика, надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
+                      </p>
 
-                  <div class="feedback__wrapper">
-                    <p class="feedback__text">
-                      Благодарю Вас за установку сеточки на балконе! Надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
-                    </p>
-
-                    <div class="feedback__footer">
-                      <span class="feedback__name">Александр А.</span>
-                      <time class="feedback__date">21.08.21</time>
+                      <div class="feedback__footer">
+                        <span class="feedback__name">Александр А.</span>
+                        <time class="feedback__date">21.08.21</time>
+                      </div>
+                      <!-- /.feedback__footer -->
                     </div>
-                    <!-- /.feedback__footer -->
+                    <!-- /.feedback__wrapper -->
                   </div>
-                  <!-- /.feedback__wrapper -->
+                  <!-- /.feedback__card -->
                 </div>
-                <!-- /.feedback__card -->
-              </div>
-              <!-- /.swiper-slide -->
+                <!-- /.swiper-slide -->
 
-              <div class="swiper-slide">
-                <div class="feedback__card">
-                  <div class="feedback__picture">
-                    <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
-                  </div>
-                  <!-- /.feedback__picture -->
-
-                  <div class="feedback__wrapper">
-                    <p class="feedback__text">
-                      Благодарю Вас за установку сеточки на балконе! Надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
-                    </p>
-
-                    <div class="feedback__footer">
-                      <span class="feedback__name">Александр А.</span>
-                      <time class="feedback__date">21.08.21</time>
+                <div class="swiper-slide">
+                  <div class="feedback__card">
+                    <div class="feedback__picture">
+                      <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
                     </div>
-                    <!-- /.feedback__footer -->
+                    <!-- /.feedback__picture -->
+
+                    <div class="feedback__wrapper">
+                      <p class="feedback__text">
+                        Благодарю Вас за установку сеточки на балконе! Надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
+                      </p>
+
+                      <div class="feedback__footer">
+                        <span class="feedback__name">Александр А.</span>
+                        <time class="feedback__date">21.08.21</time>
+                      </div>
+                      <!-- /.feedback__footer -->
+                    </div>
+                    <!-- /.feedback__wrapper -->
                   </div>
-                  <!-- /.feedback__wrapper -->
+                  <!-- /.feedback__card -->
                 </div>
-                <!-- /.feedback__card -->
+                <!-- /.swiper-slide -->
+
+                <div class="swiper-slide">
+                  <div class="feedback__card">
+                    <div class="feedback__picture">
+                      <img src="img/page/main/feedback/avatar.png" alt="" class="feedback__image image image--cover">
+                    </div>
+                    <!-- /.feedback__picture -->
+
+                    <div class="feedback__wrapper">
+                      <p class="feedback__text">
+                        Благодарю Вас за установку сеточки на балконе! Надеюсь прослужит долго! Спасибо, вам, Михаил, и вашему коллеге за оперативность!
+                      </p>
+
+                      <div class="feedback__footer">
+                        <span class="feedback__name">Александр А.</span>
+                        <time class="feedback__date">21.08.21</time>
+                      </div>
+                      <!-- /.feedback__footer -->
+                    </div>
+                    <!-- /.feedback__wrapper -->
+                  </div>
+                  <!-- /.feedback__card -->
+                </div>
+                <!-- /.swiper-slide -->
               </div>
-              <!-- /.swiper-slide -->
+              <!-- /.swiper-wrapper -->
             </div>
-            <!-- /.swiper-wrapper -->
+            <!-- /.swiper swiper--overflow slider-feedback -->
+
+            <div class="swiper__control">
+              <div class="swiper-button-prev slider-feedback__prev"></div>
+              <div class="swiper-button-next slider-feedback__next"></div>
+            </div>
+            <!-- /.swiper__control -->
           </div>
-          <!-- /.swiper swiper--overflow slider-feedback -->
+          <!-- /.slider -->
         </div>
         <!-- /.callback -->
       </div>
