feat: переработка главного экрана и доработка верстки

--- a/src/index.html
+++ b/src/index.html
@@ -152,27 +152,74 @@
     <section id="hero" class="section">
       <div class="container">
         <div class="hero">
-          <div class="swiper slider-hero">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="hero__picture">
-                  <img class="hero__image image image--cover" src="img/page/main/hero/banner.jpg" alt="">
-                </div>
-                <!-- /.hero__picture -->
-              </div>
-              <!-- /.swiper-slide -->
+          <div class="row">
+            <div class="col-6">
+              <div class="hero__content">
+                <h1 class="hero__title page__title section__title">
+                  <span>ИЗГОТОВЛЕНИЕ НА ЗАКАЗ</span> <br> МОСКИТНЫХ СЕТОК <br> РУЛОННЫХ ШТОР И ЖАЛЮЗИ
+                </h1>
 
-              <div class="swiper-slide">
-                <div class="hero__picture">
-                  <img class="hero__image image image--cover" src="img/page/main/hero/banner-2.jpg" alt="">
+                <h2 class="hero__subtite section__title">Изделия любой сложности и формы от производителя</h2>
+
+                <div class="hero__advantages">
+                  <ul class="hero__list list list--mark">
+                    <li class="list__item">Выезд специалиста <span data-tippy-content="При заключении договора" class="info">бесплатно</span> в день обращения;</li>
+                    <li class="list__item">Изделие <strong>по вашим размерам</strong> за 10 минут;</li>
+                    <li class="list__item">Даем гарантию <strong>1 год</strong> с момента установки;</li>
+                    <li class="list__item">Свое производство, <strong>низкие цены;</strong></li>
+                  </ul>
                 </div>
-                <!-- /.hero__picture -->
+                <!-- /.hero__advantages -->
               </div>
-              <!-- /.swiper-slide -->
+              <!-- /.hero__content -->
             </div>
-            <!-- /.swiper-wrapper -->
+            <!-- /.col-6 -->
+
+            <div class="col-6">
+              <div class="hero__slider">
+                <div class="swiper slider-hero">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <div class="hero__picture">
+                        <img class="hero__image image image--cover" src="img/page/main/hero/1.jpg" alt="">
+                      </div>
+                      <!-- /.hero__picture -->
+                    </div>
+                    <!-- /.swiper-slide -->
+
+                    <div class="swiper-slide">
+                      <div class="hero__picture">
+                        <img class="hero__image image image--cover" src="img/page/main/hero/2.jpg" alt="">
+                      </div>
+                      <!-- /.hero__picture -->
+                    </div>
+                    <!-- /.swiper-slide -->
+
+                    <div class="swiper-slide">
+                      <div class="hero__picture">
+                        <img class="hero__image image image--cover" src="img/page/main/hero/3.jpg" alt="">
+                      </div>
+                      <!-- /.hero__picture -->
+                    </div>
+                    <!-- /.swiper-slide -->
+
+                    <div class="swiper-slide">
+                      <div class="hero__picture">
+                        <img class="hero__image image image--cover" src="img/page/main/hero/4.jpg" alt="">
+                      </div>
+                      <!-- /.hero__picture -->
+                    </div>
+                    <!-- /.swiper-slide -->
+                  </div>
+                  <!-- /.swiper-wrapper -->
+                </div>
+                <!-- /.swiper slider-hero -->
+              </div>
+              <!-- /.hero__slider -->
+            </div>
+            <!-- /.col-6 -->
           </div>
-          <!-- /.swiper slider-hero -->
+          <!-- /.row -->
         </div>
         <!-- /.hero -->
       </div>
@@ -577,12 +624,12 @@
             <div class="col-4">
               <div class="service__item">
                 <div class="service__picture">
-                  <img src="img/section/catalog/lock.jpg" alt="" class="service__image image image--cover">
+                  <img src="img/section/catalog/tinting.jpg" alt="" class="service__image image image--cover">
                 </div>
                 <!-- /.service__picture -->
 
                 <div class="service__content">
-                  <h3 class="service__title">Замки от детей</h3>
+                  <h3 class="service__title">Тонировка окон</h3>
                   <span class="service__link link link--arrow">Подробнее
                     <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd"
@@ -602,12 +649,12 @@
             <div class="col-4">
               <div class="service__item">
                 <div class="service__picture">
-                  <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
+                  <img src="img/section/catalog/compressor.png" alt="" class="service__image image image--cover">
                 </div>
                 <!-- /.service__picture -->
 
                 <div class="service__content">
-                  <h3 class="service__title">Ограничители (гребенки)</h3>
+                  <h3 class="service__title">Замена уплотнителя</h3>
                   <span class="service__link link link--arrow">Подробнее
                     <svg class="link__arrow svg ms-2" width="13" height="10" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd"
